@@ -3,7 +3,11 @@
 date Version 3.00.38 (Beta 3)
 ^ Updated the program icon.
 * Fixed FS#169 — "About dialog box fails to open web browser for home page URL"
-* Fixed FS#171 — "Wrong string literal macro in generated headers for internationalized code generation"
+* Fixed FS#171 — "Wrong string literal macro in generated headers 
+  for internationalized code generation"
+* Fixed FS#165 — "focus in wxNotebook always switches to the first panel after 
+  adding a widget/layout to another panel"
+* Fixed FS#166 — "Adding three tabs to tab control throws an error."
 
 03-27-2007 Version 3.00.37 (Beta 3)
 + Added mouse events to common events.
